--- a/AboutUS.html
+++ b/AboutUS.html
@@ -168,6 +168,7 @@ flex-direction: column;
 }
 body{
  display:flex;
+ height:100%;
 
 }
 .container{
@@ -396,7 +397,7 @@ right: -62%;
 		<td><img src="./Imgs/shake.png" alt="Shaking hands"/></td>
 	</tr>
 	<tr>
-		<td><img src="" alt=""/></td>
+		<td><img src="./Imgs/Team.jpg" alt="team" style="height: 370px;"/></td>
 		<td>
 			<h3 class="textFont">Meet the Team</h3>
 				<article class="para" style=" text-align: justify;">
