--- a/ContactForm.html
+++ b/ContactForm.html
@@ -143,7 +143,7 @@
   	 		<div class="footer-col">
   	 			<h4>follow us</h4>
   	 			<div class="social-links">
-  	 				<a href="www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+  	 				<a href="www.facebook.com"><i class="fab fa-facebook-f" style="background-color: blue;"></i></a>
   	 				<a href="www.twitter.com"><i class="fab fa-twitter"></i></a>
   	 				<a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
   	 				<a href="www.linkedin.com"><i class="fab fa-linkedin-in"></i></a>
