--- a/Resto.html
+++ b/Resto.html
@@ -45,11 +45,11 @@
             <i>Restaurants</i></h1>
      </center>
 	 
-	 <section>
+	 <!--<section>
 	    
 		<input type="text" id="searchBar" placeholder="Search for your selected region">
 		<button>
-   	 </section>
+   	 </section>-->
 	   
 	   <table style="margin: 5% 20%;border-spacing: 0 20px;">
         <tr>
