--- a/ContactForm.html
+++ b/ContactForm.html
@@ -15,7 +15,7 @@
 	<div class="navbar">
 		<div class="inner_navbar">
 			<div class="logo">
-				<a href="#">Hostel <span>Postel</span></a>
+				<a href="#" style="text-decoration:none;cursor:default;">Hostel <span>Postel</span></a>
 			</div>
 			<div class="menu">
 				<ul>
@@ -32,13 +32,7 @@
 		</div>
 	</div>
   
-  <script>var hamburger = document.querySelector(".hamburger");
-	var menu = document.querySelector(".menu");
-
-	hamburger.addEventListener("click", function(){
-		menu.classList.toggle("active");
-	})
-	</script>
+  
   
     <div class="container">
       <span class="big-circle"></span>
