--- a/Hotels.html
+++ b/Hotels.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="shortcut icon" href="./Imgs/icon.png">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+	
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Hotels</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
@@ -28,7 +36,7 @@
             width: 100%;
             height: 60px;
             background: #072c87;
-            position: fixed;
+            position: absolute;
             top: 0;
             left: 0;
             padding: 0 25px;
@@ -264,7 +272,7 @@
     <div class="navbar" >
         <div class="inner_navbar">
             <div class="logo">
-                <a href="#">Hostel <span>Postel</span></a>
+                <a href="#" style="text-decoration:none;cursor:default;">Hostel <span>Postel</span></a>
             </div>
             <div class="menu">
                 <ul>
@@ -283,21 +291,21 @@
             <i>Hotels Details</i></h1>
     </center>
 
-    <table style="margin: 5% 20%;">
+    <table style="margin: 5% 20%;border-collapse: separate;border-spacing: 0px 20px;">
         <tr>
-            <td>
+            <td data-aos="flip-left">
                 <img src="Imgs/burjarabhd.jpg">
             </td>
-            <td style="padding-left: 3%;">
+            <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
                                 style="color: blue;"></i></a>
                         Burj Al Arab</b></p><br>
-                <p><b><i class="fas fa-map-pin" style="color: blue;"></i> The Burj Al Arab Hotel is located on an
+                <p style="line-height:20px;"><b><i class="fas fa-map-pin" style="color: blue;"></i> The Burj Al Arab Hotel is located on an
                         artificial man-made island, with a height of 321 meters and is classified as a 7-star hotel.</b>
                 </p>
                 <br>
                 <p>
-                <ul>
+                <ul style="line-height:20px; margin-left:0px;">
                     <i class="fas fa-plane" style="color: blue;"></i><b>Tours</b>
                     <li><b style="color: black;">. Art Galleries</b></li>
                     <li><b style="color: black;">. Public Parks</b></li>
@@ -314,19 +322,19 @@
 
     <table style="margin: 5% 20%;">
         <tr>
-            <td>
+            <td data-aos="flip-left">
                 <img src="Imgs/The Chedi Muscat hdd.jpg">
             </td>
-            <td colspan="4" style="padding-left: 3%;">
+            <td colspan="4" style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://g.page/TheChediMuscat?share" target="_blank"><i class="fas fa-map-marker-alt"
                                 style="color: blue;"></i></a>
                         The Chedi Muscat – a GHM hotel</b></p><br>
-                <p><b><i class="fas fa-map-pin" style="color: blue;"></i> The hotel offers 6 diverse international
+                <p style="line-height:14px;"><b><i class="fas fa-map-pin" style="color: blue;"></i> The hotel offers 6 diverse international
                         restaurants, tickets to sightseeing and performances, as well as a large number of activities,
                         including live musical performances, horse riding and bicycles.</b></p>
                 <br>
                 <p>
-                <ul>
+                <ul style="line-height:20px; margin-left:0px;">
                     <i class="fas fa-h-square" style="color: blue;"></i><b> Basic Amenities</b>
                     <li><b style="color: black;">. 158 guestrooms</b></li>
                     <li><b style="color: black;">. Daily housekeeping service</b></li>
@@ -345,19 +353,19 @@
 
     <table style="margin: 5% 20%;">
         <tr>
-            <td>
+            <td data-aos="flip-left">
                 <img src="./Imgs/Mandarin Oriental Jumeira, Dubai hd.jpg">
             </td>
-            <td style="padding-left: 3%;">
+            <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://goo.gl/maps/aSqUkkxoh8JiUR3H6" target="_blank"><i class="fas fa-map-marker-alt"
                                 style="color: blue;"></i></a>
                         Mandarin Oriental Jumeira, Dubai</b></p><br>
-                <p><b><i class="fas fa-map-pin" style="color: blue;"></i> Mandarin Oriental Jumeirah, Dubai, with its
+                <p style="line-height:18px;"><b><i class="fas fa-map-pin" style="color: blue;"></i> Mandarin Oriental Jumeirah, Dubai, with its
                         charming views of both the clear waters of the Arabian Gulf and the sparkling Dubai skyline,
                         Dubai is a truly stunning destination with a beach that many will envy.</i></b></p>
                 <br>
                 <p><b> <i class="fas fa-h-square" style="color: blue;"></i> Some services at the hotel</b></p>
-                <ul>
+                <ul style="line-height:20px; margin-left:0px;">
                     <li><b style="color: black;">. 5-star hotel</b></li>
                     <li><b style="color: black;">. elevator</b></li>
                     <li><b style="color: black;">. Shops</b></li>
@@ -374,20 +382,20 @@
 
     <table style="margin: 5% 20%;">
         <tr>
-            <td>
+            <td data-aos="flip-left">
                 <img src="Imgs/mandarin doha hd.jpg">
             </td>
-            <td style="padding-left: 3%;">
+            <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://g.page/mandarin-oriental-doha?share" target="_blank"><i
                                 class="fas fa-map-marker-alt" style="color: blue;"></i></a>
                         Mandarin Oriental,Doha</b></p>
                 <br>
-                <p><b><i class="fas fa-map-pin" style="color: blue;"></i> The Mandarin Oriental Hotel, Doha is located
+                <p style="line-height:20px;"><b><i class="fas fa-map-pin" style="color: blue;"></i> The Mandarin Oriental Hotel, Doha is located
                         in the center of the "Msheireb Downtown Doha" project, the cultural and vibrant center of social
                         life in the city.</b></p>
                 <br>
                 <p><b> <i class="fas fa-home" style="color: blue;"></i> Places close to Musherib Hotel Doha</b></p>
-                <ul>
+                <ul style="line-height:20px; margin-left:0px;">
                     <li><b style="color: black;">. Emiri Diwan</b></li>
                     <li><b style="color: black;">. Al Khoot Fort</b></li>
                     <li><b style="color: black;">. Falcon Market</b></li>
@@ -404,18 +412,18 @@
 
     <table style="margin: 5% 20%;">
         <tr>
-            <td>
+            <td data-aos="flip-left">
                 <img src="Imgs/W Doha hd.jpg">
             </td>
-            <td style="padding-left: 3%;">
-                <p><b><a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
+            <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
+                <p style="line-height:20px;"><b><a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
                                 style="color: blue;"></i></a>
                         W Doha</b></p>
                         <br>
-                        <p><b><i class="fas fa-map-pin" style="color: blue;"></i> Just 200 meters from the Corniche promenade and City Center shopping mall, this boutique hotel offers elegant rooms with satellite TV. It features an outdoor pool, spa center and on-site restaurants</b></p>        
+                        <p style="line-height:20px;"><b><i class="fas fa-map-pin" style="color: blue;"></i> Just 200 meters from the Corniche promenade and City Center shopping mall, this boutique hotel offers elegant rooms with satellite TV. It features an outdoor pool, spa center and on-site restaurants</b></p>        
                         <br>
                         <p><b><i class="fas fa-ambulance" style="color: blue;"></i> Covid 19 - Health Security</b></p>
-                        <ul>
+                        <ul style="line-height:20px; margin-left:0px;">
                             <li><b style="color: black;">.  Disinfection with viricide</b></li>
                             <li><b style="color: black;">.  Check your body temperature</b></li>
                             <li><b style="color: black;">.  Daily cleansing of textiles</b></li>
@@ -431,18 +439,18 @@
 
     <table style="margin: 5% 20%;">
         <tr>
-            <td>
+            <td data-aos="flip-left">
                 <img src="Imgs/kempinski hd.jpg">
             </td>
-            <td style="padding-left: 3%;">
-                <p><b><a href="https://g.page/KempinskiMuscat?share" target="_blank"><i class="fas fa-map-marker-alt"
+            <td style="padding-left: 3%;line-height:2px;" data-aos="flip-left">
+                <p style="line-height:20px;"><b><a href="https://g.page/KempinskiMuscat?share" target="_blank"><i class="fas fa-map-marker-alt"
                                 style="color: blue;"></i></a>
                         Kempinski Hotel Muscat </b></p>
                         <br>
-                        <p><b><i class="fas fa-map-pin" style="color: blue;"></i> The rooms at the hotel feature room service and concierge services, to make you enjoy your visit.  The property also features a swimming pool and breakfast.  Guests arriving by car have access to free parking</b></p>
+                        <p style="line-height:20px;"><b><i class="fas fa-map-pin" style="color: blue;"></i> The rooms at the hotel feature room service and concierge services, to make you enjoy your visit.  The property also features a swimming pool and breakfast.  Guests arriving by car have access to free parking</b></p>
                         <br>
                         <p><b><i class="fas fa-shield-alt" style="color: blue;"></i> Safety and protection</b></p>    
-                        <ul>
+                        <ul style="line-height:20px; margin-left:0px;">
                             <li><b style="color: black;">.  Lockbox</b></li>
                             <li><b style="color: black;">.   24/7 security</b></li>
                             <li><b style="color: black;">.   alarm</b></li>
@@ -490,6 +498,15 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
         integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
         crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+           <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+		  <script>
+			 AOS.init({
+            offset: 300,
+            duration: 1000,
+        });
+		  </script>
 </body>
 
 </html>
