--- a/AboutUS.html
+++ b/AboutUS.html
@@ -337,7 +337,7 @@ right: -62%;
 	<div class="navbar">
 		<div class="inner_navbar">
 			<div class="logo">
-				<a href="#">Hostel <span>Postel</span></a>
+				<a href="#" style="text-decoration:none;cursor:default;">Hostel <span>Postel</span></a>
 			</div>
 			<div class="menu">
 				<ul>
@@ -367,16 +367,7 @@ right: -62%;
     <article style="margin-bottom:2%;font-family:Rajdhani;color:black;font-size: 24px;"> Hostel Postel is an online booking site that allows customers to book a lovely vacation on the go no matter what the budget is 
 	</article>
 </center>
-	<!--<div class="container">
-	<div class="layer1">
-	About Us
-	</div>
-	<div class="layer2">
-	Our story
-	</div>
-	<div class="vl"></div>
-	<div class="v2"></div>
-</div>-->
+
 	<table style="width: 80%; height:80%; margin-left: auto; margin-right: auto;">
 	<tr>
 		<td><img src="./Imgs/groupImg.jpg"></td>
