--- a/HostelPostel.html
+++ b/HostelPostel.html
@@ -14,10 +14,10 @@
 	<img class="bg-img-view" src="./Imgs/bgImage1.jpeg" />
     
 	<ul class="nav">
-	<li><a class="nav1-1" href="Hotels.html">Hotels</a></li>
-	<li><a class="nav1-1" href="Resto.html">Restaurants</a></li>
-	<li><a class="nav1-1" href="ContactForm.html">Contact Us</a></li>
-	<li><a class="nav1-1" href="AboutUS.html">About Us</a></li>
+	<li><a class="nav1-1" href="src/Hotels/Hotels.html">Hotels</a></li>
+	<li><a class="nav1-1" href="src/Resto/Resto.html">Restaurants</a></li>
+	<li><a class="nav1-1" href="src/ContactForm/ContactForm.html">Contact Us</a></li>
+	<li><a class="nav1-1" href="src/AboutUs/AboutUS.html">About Us</a></li>
 	</ul>
 	
 	<div class="top-left">
@@ -149,17 +149,17 @@ style=" fill:#000000;"></svg>
   	 		<div class="footer-col">
   	 			<h4>Company</h4>
   	 			<ul>
-  	 				<li><a href="AboutUS.html">About us</a></li>
-  	 				<li><a href="PrivacyPolicy.html">Privacy policy</a></li>
+  	 				<li><a href="src/AboutUs/AboutUS.html">About us</a></li>
+  	 				<li><a href="src/PrivacyPolicy/PrivacyPolicy.html">Privacy policy</a></li>
 					<li><a href="#top">Back to the top</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4>Get Help</h4>
   	 			<ul>
-  	 				<li><a href="FAQ.html">FeedBack</a></li>
-  	 				<li><a href="ContactForm.html">Contact Us</a></li>
-  	 				<li><a href="covid19.html">Covid-19 Safety Measures</a></li>
+  	 				<li><a href="src/FAQ/FAQ.html">FeedBack</a></li>
+  	 				<li><a href="src/ContactForm/ContactForm.html">Contact Us</a></li>
+  	 				<li><a href="src/covid19/covid19.html">Covid-19 Safety Measures</a></li>
   	 			</ul>
   	 		</div>
 
