--- a/src/AboutUS/AboutUS.html
+++ b/src/AboutUS/AboutUS.html
@@ -263,6 +263,9 @@ right: -62%;
   height:16%;
 
 }
+.row{
+display:flex;
+}
 .footer-col{
    width: 30%;
    padding: 0 15px;
@@ -341,11 +344,11 @@ right: -62%;
 			</div>
 			<div class="menu">
 				<ul>
-					<li><a href="HostelPostel.html"  style="text-decoration:none;">Home</a></li>
-					<li><a href="Hotels.html" style="text-decoration:none;">Hotels</a></li>
-					<li><a href="Resto.html" style="text-decoration:none;">Restaurants</a></li>
-					<li><a href="ContactForm.html" style="text-decoration:none;">Contact</a></li>
-					<li><a href="AboutUS.html" style="text-decoration:none;" class="active">About</a></li>
+					<li><a href="../../HostelPostel.html"  style="text-decoration:none;">Home</a></li>
+					<li><a href="../Hotels/Hotels.html" style="text-decoration:none;">Hotels</a></li>
+					<li><a href="../Resto/Resto.html" style="text-decoration:none;">Restaurants</a></li>
+					<li><a href="../ContactForm/ContactForm.html" style="text-decoration:none;">Contact</a></li>
+					<li><a href="../AboutUs/AboutUS.html" style="text-decoration:none;" class="active">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -370,7 +373,7 @@ right: -62%;
 
 	<table style="width: 80%; height:80%; margin-left: auto; margin-right: auto;">
 	<tr>
-		<td><img src="./Imgs/groupImg.jpg"></td>
+		<td><img src="../../Imgs/groupImg.jpg"></td>
 		<td>
 			<h1 class="textFont">Our Story began</h1>
 				<article class="para" style=" text-align: justify;">
@@ -385,10 +388,10 @@ right: -62%;
 				We started small with only 2 partners and now we have expanded our reach to several countries with numerous partners under our belt. 
 				</article>
 			</td>
-		<td><img src="./Imgs/shake.png" alt="Shaking hands"/></td>
+		<td><img src="../../Imgs/shake.png" alt="Shaking hands"/></td>
 	</tr>
 	<tr>
-		<td><img src="./Imgs/Team.jpg" alt="team" style="height: 370px;"/></td>
+		<td><img src="../../Imgs/Team.jpg" alt="team" style="height: 370px;"/></td>
 		<td>
 			<h3 class="textFont">Meet the Team</h3>
 				<article class="para" style=" text-align: justify;">
@@ -404,17 +407,17 @@ right: -62%;
   	 		<div class="footer-col">
   	 			<h4 style="margin-top:24px">Company</h4>
   	 			<ul>
-  	 				<li><a href="AboutUS.html">About us</a></li>
-  	 				<li><a href="PrivacyPolicy.html">Privacy policy</a></li>
+  	 				<li><a href="../AboutUs/AboutUS.html">About us</a></li>
+  	 				<li><a href="../PrivacyPolicy/PrivacyPolicy.html">Privacy policy</a></li>
 					<li><a href="#top">Back to the top</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4 style="margin-top:24px">Get Help</h4>
   	 			<ul>
-  	 				<li><a href="FAQ.html">FeedBack</a></li>
-  	 				<li><a href="ContactForm.html">Contact Us</a></li>
-  	 				<li><a href="covid19.html">Covid-19 Safety Measures</a></li>
+  	 				<li><a href="../FAQ/FAQ.html">FeedBack</a></li>
+  	 				<li><a href="../ContactForm/ContactForm.html">Contact Us</a></li>
+  	 				<li><a href="../covid19/covid19.html">Covid-19 Safety Measures</a></li>
   	 			</ul>
   	 		</div>
 
