--- a/src/ContactForm/ContactForm.html
+++ b/src/ContactForm/ContactForm.html
@@ -19,11 +19,11 @@
 			</div>
 			<div class="menu">
 				<ul>
-					<li><a href="HostelPostel.html" style="text-decoration:none;">Home</a></li>
-					<li><a href="Hotels.html" style="text-decoration:none;">Hotels</a></li>
-					<li><a href="Resto.html" style="text-decoration:none;">Restaurants</a></li>
-					<li><a href="ContactForm.html" style="text-decoration:none;" class="active">Contact</a></li>
-					<li><a href="AboutUS.html" style="text-decoration:none;">About</a></li>
+					<li><a href="../../HostelPostel.html" style="text-decoration:none;">Home</a></li>
+					<li><a href="./../Hotels/Hotels.html" style="text-decoration:none;">Hotels</a></li>
+					<li><a href="./../Resto/Resto.html" style="text-decoration:none;">Restaurants</a></li>
+					<li><a href="./../ContactForm/ContactForm.html" style="text-decoration:none;" class="active">Contact</a></li>
+					<li><a href="./../AboutUs/AboutUS.html" style="text-decoration:none;">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 	
 	<div style="background-color: #fafafa;">
 	<iframe class="40View" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13250.601626354875!2d35.4969011!3d33.8728994!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf1ec1faedb96137f!2sBeirut%20Arab%20University!5e0!3m2!1sen!2slb!4v1622057998676!5m2!1sen!2slb" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-	<img src="./Imgs/collab.jpeg" class="viewIMG"/>
+	<img src="../../Imgs/collab.jpeg" class="viewIMG"/>
 	</div>
 	
 <footer class="footer">
@@ -120,17 +120,17 @@
   	 		<div class="footer-col">
   	 			<h4>Company</h4>
   	 			<ul>
-  	 				<li><a href="AboutUS.html">About us</a></li>
-  	 				<li><a href="PrivacyPolicy.html">Privacy policy</a></li>
-  	 				<li><a href="#top">Back to the top</a></li>
+  	 				<li><a href="../AboutUs/AboutUS.html">About us</a></li>
+  	 				<li><a href="../PrivacyPolicy/PrivacyPolicy.html">Privacy policy</a></li>
+					<li><a href="#top">Back to the top</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4>Get Help</h4>
   	 			<ul>
-  	 				<li><a href="FAQ.html">FAQ</a></li>
-  	 				<li><a href="ContactForm.html">Contact Us</a></li>
-  	 				<li><a href="covid19.html">Covid-19 Safety Measures</a></li>
+  	 				<li><a href="../FAQ/FAQ.html">FeedBack</a></li>
+  	 				<li><a href="../ContactForm/ContactForm.html">Contact Us</a></li>
+  	 				<li><a href="../covid19/covid19.html">Covid-19 Safety Measures</a></li>
   	 			</ul>
   	 		</div>
 
