--- a/src/Hotels/Hotels.html
+++ b/src/Hotels/Hotels.html
@@ -276,11 +276,11 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="HostelPostel.html"  style="text-decoration:none;">Home</a></li>
-                    <li><a href="Hotels.html" style="text-decoration:none;" class="active">Hotels</a></li>
-                    <li><a href="Resto.html" style="text-decoration:none;">Restaurants</a></li>
-                    <li><a href="ContactForm.html" style="text-decoration:none;">Contact</a></li>
-                    <li><a href="AboutUS.html" style="text-decoration:none;">About</a></li>
+                    <li><a href="../../HostelPostel.html"  style="text-decoration:none;">Home</a></li>
+                    <li><a href="../Hotels/Hotels.html" style="text-decoration:none;" class="active">Hotels</a></li>
+                    <li><a href="../Resto/Resto.html" style="text-decoration:none;">Restaurants</a></li>
+                    <li><a href="../ContactForm/ContactForm.html" style="text-decoration:none;">Contact</a></li>
+                    <li><a href="../AboutUs/AboutUS.html" style="text-decoration:none;">About</a></li>
                 </ul>
             </div>
         </div>
@@ -294,7 +294,7 @@
     <table style="margin: 5% 20%;border-collapse: separate;border-spacing: 0px 20px;">
         <tr>
             <td data-aos="flip-left">
-                <img src="Imgs/burjarabhd.jpg">
+                <img src="../../Imgs/burjarabhd.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -323,7 +323,7 @@
     <table style="margin: 5% 20%;">
         <tr>
             <td data-aos="flip-left">
-                <img src="Imgs/The Chedi Muscat hdd.jpg">
+                <img src="../../Imgs/The Chedi Muscat hdd.jpg">
             </td>
             <td colspan="4" style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://g.page/TheChediMuscat?share" target="_blank"><i class="fas fa-map-marker-alt"
@@ -354,7 +354,7 @@
     <table style="margin: 5% 20%;">
         <tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/Mandarin Oriental Jumeira, Dubai hd.jpg">
+                <img src="../../Imgs/Mandarin Oriental Jumeira, Dubai hd.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://goo.gl/maps/aSqUkkxoh8JiUR3H6" target="_blank"><i class="fas fa-map-marker-alt"
@@ -383,7 +383,7 @@
     <table style="margin: 5% 20%;">
         <tr>
             <td data-aos="flip-left">
-                <img src="Imgs/mandarin doha hd.jpg">
+                <img src="../../Imgs/mandarin doha hd.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p><b><a href="https://g.page/mandarin-oriental-doha?share" target="_blank"><i
@@ -413,7 +413,7 @@
     <table style="margin: 5% 20%;">
         <tr>
             <td data-aos="flip-left">
-                <img src="Imgs/W Doha hd.jpg">
+                <img src="../../Imgs/W Doha hd.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p style="line-height:20px;"><b><a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -440,7 +440,7 @@
     <table style="margin: 5% 20%;">
         <tr>
             <td data-aos="flip-left">
-                <img src="Imgs/kempinski hd.jpg">
+                <img src="../../Imgs/kempinski hd.jpg">
             </td>
             <td style="padding-left: 3%;line-height:2px;" data-aos="flip-left">
                 <p style="line-height:20px;"><b><a href="https://g.page/KempinskiMuscat?share" target="_blank"><i class="fas fa-map-marker-alt"
@@ -469,17 +469,17 @@
   	 		<div class="footer-col">
   	 			<h4>Company</h4>
   	 			<ul>
-  	 				<li><a href="AboutUS.html">About us</a></li>
-  	 				<li><a href="PrivacyPolicy.html">Privacy policy</a></li>
-  	 				<li><a href="#top">Back to the top</a></li>
+  	 				<li><a href="../AboutUs/AboutUS.html">About us</a></li>
+  	 				<li><a href="../PrivacyPolicy/PrivacyPolicy.html">Privacy policy</a></li>
+					<li><a href="#top">Back to the top</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4>Get Help</h4>
   	 			<ul>
-  	 				<li><a href="FAQ.html">FeedBack</a></li>
-  	 				<li><a href="ContactForm.html">Contact Us</a></li>
-  	 				<li><a href="covid19.html">Covid-19 Safety Measures</a></li>
+  	 				<li><a href="../FAQ/FAQ.html">FeedBack</a></li>
+  	 				<li><a href="../ContactForm/ContactForm.html">Contact Us</a></li>
+  	 				<li><a href="../covid19/covid19.html">Covid-19 Safety Measures</a></li>
   	 			</ul>
   	 		</div>
 
