--- a/src/PrivacyPolicy/PrivacyPolicy.html
+++ b/src/PrivacyPolicy/PrivacyPolicy.html
@@ -350,8 +350,8 @@ Last updated May 2021
   	 		<div class="footer-col">
   	 			<h4>Company</h4>
   	 			<ul>
-  	 				<li><a href="AboutUS.html">About us</a></li>
-  	 				<li><a href="PrivacyPolicy.html">privacy policy</a></li>
+  	 				<li><a href="../AboutUs/AboutUS.html">About us</a></li>
+  	 				<li><a href="../PrivacyPolicy/PrivacyPolicy.html">Privacy policy</a></li>
 					<li><a href="#top">Back to the top</a></li>
   	 				
   	 			</ul>
@@ -359,9 +359,9 @@ Last updated May 2021
   	 		<div class="footer-col">
   	 			<h4>Get Help</h4>
   	 			<ul>
-  	 				<li><a href="FAQ.html">FAQ</a></li>
-  	 				<li><a href="ContactForm.html">Contact Us</a></li>
-  	 				<li><a href="#">Covid-19 Safety Measures</a></li>
+  	 				<li><a href="../FAQ/FAQ.html">FeedBack</a></li>
+  	 				<li><a href="../ContactForm/ContactForm.html">Contact Us</a></li>
+  	 				<li><a href="../covid19/covid19.html">Covid-19 Safety Measures</a></li>
   	 			</ul>
   	 		</div>
 
