--- a/src/Resto/Resto.html
+++ b/src/Resto/Resto.html
@@ -23,11 +23,11 @@
 			</div>
 			<div class="menu">
 				<ul>
-					<li><a href="HostelPostel.html" style="text-decoration:none;">Home</a></li>
-					<li><a href="Hotels.html" style="text-decoration:none;">Hotels</a></li>
-					<li><a href="Resto.html" style="text-decoration:none;" class="active" >Restaurants</a></li>
-					<li><a href="ContactForm.html" style="text-decoration:none;">Contact</a></li>
-					<li><a href="AboutUS.html" style="text-decoration:none;">About</a></li>
+					<li><a href="../../HostelPostel.html" style="text-decoration:none;">Home</a></li>
+					<li><a href="../Hotels/Hotels.html" style="text-decoration:none;">Hotels</a></li>
+					<li><a href="../Resto/Resto.html" style="text-decoration:none;" class="active" >Restaurants</a></li>
+					<li><a href="../ContactForm/ContactForm.html" style="text-decoration:none;">Contact</a></li>
+					<li><a href="../AboutUs/AboutUS.html" style="text-decoration:none;">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -59,7 +59,7 @@
 	   <table style="margin: 5% 20%;border-collapse: separate;border-spacing: 0px 20px;">
         <tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/AlIwan.jpg">
+                <img src="../../Imgs/AlIwan.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -84,7 +84,7 @@
 		
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/Skyview.jpg">
+                <img src="../../Imgs/Skyview.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -109,7 +109,7 @@
 		
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/Puerto99.jpg">
+                <img src="../../Imgs/Puerto99.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -136,7 +136,7 @@
 		
 		<tr>
             <td>
-                <img src="./Imgs/OliveBeach.jpg" data-aos="flip-left">
+                <img src="../../Imgs/OliveBeach.jpg" data-aos="flip-left">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -161,7 +161,7 @@
 		
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/TheLongPoolCabana.jpg">
+                <img src="../../Imgs/TheLongPoolCabana.jpg">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p > <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -186,7 +186,7 @@
 		
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/beach.png">
+                <img src="../../Imgs/beach.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -211,7 +211,7 @@
 		<!-- 2222222222222222-->
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/bay.png">
+                <img src="../../Imgs/bay.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -235,7 +235,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/netsu.png">
+                <img src="../../Imgs/netsu.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -259,7 +259,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/tasca.png">
+                <img src="../../Imgs/tasca.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -284,7 +284,7 @@
 		<!-- 33333333333333333333333333333-->
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/mandarian.png">
+                <img src="../../Imgs/mandarian.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -308,7 +308,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/oceanbasket.png">
+                <img src="../../Imgs/oceanbasket.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -332,7 +332,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/yasmine.png">
+                <img src="../../Imgs/yasmine.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -357,7 +357,7 @@
 		<!--44444444444444-->
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/spiga.png">
+                <img src="../../Imgs/spiga.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -381,7 +381,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/wahm.png">
+                <img src="../../Imgs/wahm.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -405,7 +405,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/coya.png">
+                <img src="../../Imgs/coya.png">
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -430,7 +430,7 @@
 		<!--555555555555555555555-->
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/soussi.jpg" >
+                <img src="../../Imgs/soussi.jpg" >
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -454,7 +454,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/rossi.jpg" >
+                <img src="../../Imgs/rossi.jpg" >
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -478,7 +478,7 @@
         </tr>
 		<tr>
             <td data-aos="flip-left">
-                <img src="./Imgs/medi.jpg" >
+                <img src="../../Imgs/medi.jpg" >
             </td>
             <td style="padding-left: 3%;line-height:0px;" data-aos="flip-left">
                 <p> <a href="https://goo.gl/maps/mcaCCCtSxwiFQ1pt8" target="_blank"><i class="fas fa-map-marker-alt"
@@ -517,17 +517,17 @@
 			<div class="footer-col">
   	 			<h4>Company</h4>
   	 			<ul>
-  	 				<li><a href="AboutUS.html">About us</a></li>
-  	 				<li><a href="PrivacyPolicy.html">Privacy policy</a>
-					</li><li><a href="#top">Back to the top</a></li>
+  	 				<li><a href="../AboutUs/AboutUS.html">About us</a></li>
+  	 				<li><a href="../PrivacyPolicy/PrivacyPolicy.html">Privacy policy</a></li>
+					<li><a href="#top">Back to the top</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4>Get Help</h4>
   	 			<ul>
-  	 				<li><a href="FAQ.html">FeedBack</a></li>
-  	 				<li><a href="ContactForm.html">Contact Us</a></li>
-  	 				<li><a href="covid19.html">Covid-19 Safety Measures</a></li>
+  	 				<li><a href="../FAQ/FAQ.html">FeedBack</a></li>
+  	 				<li><a href="../ContactForm/ContactForm.html">Contact Us</a></li>
+  	 				<li><a href="../covid19/covid19.html">Covid-19 Safety Measures</a></li>
   	 			</ul>
   	 		</div>
 
